--- a/zhilianyc/app/src/main/res/layout/activity_splash.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_splash.xml
@@ -39,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_30"
-                android:text="智链云仓"/>
+                android:text="智趣链仓"/>
 
         </LinearLayout>
 
