置换中心修改

--- a/zhilianyc/app/src/main/res/layout/popup_otc_buy_send.xml
+++ b/zhilianyc/app/src/main/res/layout/popup_otc_buy_send.xml
@@ -175,6 +175,7 @@
         android:hint="请输入交易密码"
         android:inputType="textPassword"
         android:maxLines="1"
+        android:maxLength="20"
         app:layout_constraintBottom_toBottomOf="@id/view_password"
         app:layout_constraintEnd_toEndOf="@id/view_password"
         app:layout_constraintStart_toStartOf="@id/view_password"
