--- a/zhilianyc/app/src/main/res/layout/popup_otc_buy_submit.xml
+++ b/zhilianyc/app/src/main/res/layout/popup_otc_buy_submit.xml
@@ -14,19 +14,27 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="发布转让单"
+        android:text="求购确认"
         android:textSize="@dimen/sp_18"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/view_all"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/btn_00_r10"
+        app:layout_constraintBottom_toBottomOf="@id/view_account"
+        app:layout_constraintEnd_toEndOf="@id/view_price"
+        app:layout_constraintStart_toStartOf="@+id/view_price"
+        app:layout_constraintTop_toTopOf="@id/view_price" />
 
     <View
         android:id="@+id/view_price"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_50"
         android:layout_marginTop="@dimen/dp_25"
-        android:background="@drawable/btn_00_r10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
@@ -41,14 +49,15 @@
         app:layout_constraintStart_toStartOf="@id/view_price"
         app:layout_constraintTop_toTopOf="@id/view_price" />
 
-    <EditText
+    <TextView
         android:id="@+id/et_price"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/dp_100"
         android:layout_marginEnd="@dimen/dp_15"
         android:background="@null"
-        android:hint="请输入转让单价"
+        android:gravity="center_vertical"
+        android:hint="请输入单价"
         android:inputType="numberDecimal"
         android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@id/view_price"
@@ -56,41 +65,13 @@
         app:layout_constraintStart_toStartOf="@id/view_price"
         app:layout_constraintTop_toTopOf="@id/view_price" />
 
-
-    <LinearLayout
-        android:id="@+id/ll_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="@id/view_price"
-        android:layout_marginStart="@dimen/dp_15"
-        android:layout_marginTop="@dimen/dp_10"
-        app:layout_constraintTop_toBottomOf="@+id/et_price">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="注:"
-            android:textColor="@color/color_FF4751"
-            android:textSize="@dimen/sp_12" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="散单单价：0.18-10.1元，整单单价：0.2-10.1元"
-            android:textColor="@color/color_99"
-            android:textSize="@dimen/sp_12" />
-    </LinearLayout>
-
     <View
         android:id="@+id/view_num"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_50"
-        android:layout_marginTop="@dimen/dp_20"
-        android:background="@drawable/btn_00_r10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_price" />
+        app:layout_constraintTop_toBottomOf="@+id/view_price" />
 
     <TextView
         android:id="@+id/tv_num"
@@ -102,48 +83,54 @@
         app:layout_constraintStart_toStartOf="@id/view_num"
         app:layout_constraintTop_toTopOf="@id/view_num" />
 
-    <EditText
+    <TextView
         android:id="@+id/et_num"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/dp_100"
         android:layout_marginEnd="@dimen/dp_15"
         android:background="@null"
-        android:hint="请输入转让数量，最低1个"
+        android:hint="请输入数量，最低1个"
         android:inputType="number"
-        android:maxLines="1"
+        android:gravity="center_vertical"
         android:maxLength="9"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@id/view_num"
         app:layout_constraintEnd_toEndOf="@id/view_num"
         app:layout_constraintStart_toStartOf="@id/view_num"
         app:layout_constraintTop_toTopOf="@id/view_num" />
 
+    <View
+        android:id="@+id/view_account"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_50"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_num" />
 
-    <LinearLayout
-        android:id="@+id/ll_num"
+    <TextView
+        android:id="@+id/tv_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="@id/view_num"
         android:layout_marginStart="@dimen/dp_15"
-        android:layout_marginTop="@dimen/dp_10"
-        app:layout_constraintTop_toBottomOf="@+id/et_num">
+        android:text="应付款"
+        app:layout_constraintBottom_toBottomOf="@id/view_account"
+        app:layout_constraintStart_toStartOf="@id/view_account"
+        app:layout_constraintTop_toTopOf="@id/view_account" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="注:"
-            android:textColor="@color/color_FF4751"
-            android:textSize="@dimen/sp_12" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="散单：小于50个，整单：大于等于50个"
-            android:textColor="@color/color_99"
-            android:textSize="@dimen/sp_12" />
-    </LinearLayout>
-
+    <TextView
+        android:id="@+id/et_account"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/dp_100"
+        android:layout_marginEnd="@dimen/dp_15"
+        android:hint="请输入应付款"
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        app:layout_constraintBottom_toBottomOf="@id/view_account"
+        app:layout_constraintEnd_toEndOf="@id/view_account"
+        app:layout_constraintStart_toStartOf="@id/view_account"
+        app:layout_constraintTop_toTopOf="@id/view_account" />
 
     <View
         android:id="@+id/view_password"
@@ -153,7 +140,7 @@
         android:background="@drawable/btn_00_r10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_num" />
+        app:layout_constraintTop_toBottomOf="@+id/view_all" />
 
     <TextView
         android:id="@+id/tv_password"
@@ -240,24 +227,12 @@
         android:layout_marginTop="@dimen/dp_50"
         android:background="@drawable/bg_gradients_btn_1c81e9"
         android:gravity="center"
-        android:text="发布"
+        android:text="确认"
         android:textColor="@color/white"
         android:textSize="@dimen/sp_16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_verify" />
-
-    <TextView
-        android:layout_width="@dimen/dp_200"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/btn_submit"
-        android:gravity="center"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/dp_15"
-        android:textColor="@color/color_cc"
-        android:textSize="@dimen/sp_10"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="如订单成立两小时内未付款，则京豆退还且作封禁买家账号处理"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
