--- a/zhilianyc/app/src/main/res/layout/popup_otc_sell_submit.xml
+++ b/zhilianyc/app/src/main/res/layout/popup_otc_sell_submit.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="bottom"
     android:background="@drawable/btn_f7_r20_top"
     android:paddingLeft="@dimen/dp_15"
@@ -19,6 +20,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_fee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="转让费：11"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/view_price"
+        android:layout_marginBottom="@dimen/dp_10"
+        android:textSize="@dimen/sp_12"
+        android:textColor="@color/color_99"
+        />
 
     <View
         android:id="@+id/view_all"
