--- a/zhilianyc/app/src/main/res/layout/item_shop_coupon.xml
+++ b/zhilianyc/app/src/main/res/layout/item_shop_coupon.xml
@@ -81,7 +81,7 @@
         android:textSize="@dimen/sp_12"
         app:layout_constraintStart_toEndOf="@id/tv_task_all"
         android:layout_marginStart="@dimen/dp_10"
-        tools:text="3.0京豆/天"/>
+        tools:text="3.0金豆/天"/>
 
 
     <TextView
@@ -146,7 +146,7 @@
         android:textSize="@dimen/sp_12"
         app:layout_constraintStart_toEndOf="@id/tv_4"
         android:layout_marginStart="@dimen/dp_10"
-        tools:text="10.0京豆"/>
+        tools:text="10.0金豆"/>
 
     <TextView
         android:id="@+id/tv_5"
@@ -181,7 +181,7 @@
         app:layout_constraintStart_toEndOf="@id/tv_totalBeans"
         android:textColor="@color/color_368feb"
         android:layout_marginStart="@dimen/dp_5"
-        android:text="京豆"/>
+        android:text="金豆"/>
 
     <TextView
         android:id="@+id/btn_exchange"
