--- a/zhilianyc/app/src/main/res/layout/activity_send_order.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_send_order.xml
@@ -186,7 +186,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_5"
-            android:text="京豆"
+            android:text="金豆"
             android:textColor="@color/color_FF4751" />
     </LinearLayout>
 
