--- a/zhilianyc/app/src/main/res/layout/goods_details.xml
+++ b/zhilianyc/app/src/main/res/layout/goods_details.xml
@@ -72,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_5"
-                android:text="京豆"
+                android:text="金豆"
                 android:textColor="@color/color_99"
                 android:textSize="@dimen/sp_12"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_price"
@@ -98,7 +98,7 @@
                 android:textColor="@color/color_99"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_stock"
                 app:layout_constraintStart_toStartOf="@id/gl_start_15"
-                tools:text="运费：30京豆" />
+                tools:text="运费：30金豆" />
 
             <TextView
                 android:id="@+id/tv_volume"
