--- a/zhilianyc/app/src/main/res/layout/item_hot_goods.xml
+++ b/zhilianyc/app/src/main/res/layout/item_hot_goods.xml
@@ -64,7 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_5"
-        android:text="京豆"
+        android:text="金豆"
         android:textColor="@color/color_99"
         app:layout_constraintBottom_toBottomOf="@+id/tv_price"
         app:layout_constraintStart_toEndOf="@+id/tv_price" />
