--- a/zhilianyc/app/src/main/res/layout/back_layout.xml
+++ b/zhilianyc/app/src/main/res/layout/back_layout.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:text="详情"
         android:textSize="16sp"
+        android:textColor="@color/color_text"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="13dp"
         android:layout_marginBottom="13dp"/>
