--- a/zhilianyc/app/src/main/res/layout/activity_my_team.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_my_team.xml
@@ -448,7 +448,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_3"
-                android:text="团队懂事"
+                android:text="团队董事"
                 android:textColor="@color/color_66" />
 
         </LinearLayout>
