--- a/zhilianyc/app/src/main/res/layout/activity_excitation.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_excitation.xml
@@ -3,10 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <TextView
         android:id="@+id/container"
         android:layout_width="match_parent"
+        android:padding="@dimen/dp_15"
         android:layout_height="match_parent">
-    </FrameLayout>
+    </TextView>
 
 </RelativeLayout>
