--- a/zhilianyc/app/src/main/res/layout/popup_otc_buy_send.xml
+++ b/zhilianyc/app/src/main/res/layout/popup_otc_buy_send.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="bottom"
     android:background="@drawable/btn_f7_r20_top"
     android:paddingLeft="@dimen/dp_15"
@@ -75,9 +76,10 @@
             android:textSize="@dimen/sp_12" />
 
         <TextView
+            android:id="@+id/tip_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="散单单价：0.18-10.1元，整单单价：0.2-10.1元"
+            tools:text="散单单价：0.18-10.1元，整单单价：0.2-10.1元"
             android:textColor="@color/color_99"
             android:textSize="@dimen/sp_12" />
     </LinearLayout>
@@ -137,9 +139,10 @@
             android:textSize="@dimen/sp_12" />
 
         <TextView
+            android:id="@+id/tip_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="散单：小于50个，整单：大于等于50个"
+            tools:text="散单：小于50个，整单：大于等于50个"
             android:textColor="@color/color_99"
             android:textSize="@dimen/sp_12" />
     </LinearLayout>
