--- a/zhilianyc/app/src/main/res/layout/popup_otc_sell_send.xml
+++ b/zhilianyc/app/src/main/res/layout/popup_otc_sell_send.xml
@@ -88,9 +88,10 @@
             android:textSize="@dimen/sp_12" />
 
         <TextView
+            android:id="@+id/tip_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="散单单价：0.18-10.1元，整单单价：0.2-10.1元"
+            tools:text="散单单价：0.18-10.1元，整单单价：0.2-10.1元"
             android:textColor="@color/color_99"
             android:textSize="@dimen/sp_12" />
     </LinearLayout>
@@ -150,9 +151,10 @@
             android:textSize="@dimen/sp_12" />
 
         <TextView
+            android:id="@+id/tip_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="散单：小于50个，整单：大于等于50个"
+            tools:text="散单：小于50个，整单：大于等于50个"
             android:textColor="@color/color_99"
             android:textSize="@dimen/sp_12" />
     </LinearLayout>
