--- a/zhilianyc/app/src/main/res/layout/activity_my_task.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_my_task.xml
@@ -191,56 +191,56 @@
 
 
 
-        <View
-            android:id="@+id/view_checkIn"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp_70"
-            app:layout_constraintTop_toBottomOf="@+id/view_video"
-            app:layout_constraintStart_toStartOf="@id/gl_start_15"
-            app:layout_constraintEnd_toEndOf="@id/gl_end_15"/>
+<!--        <View-->
+<!--            android:id="@+id/view_checkIn"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="@dimen/dp_70"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/view_video"-->
+<!--            app:layout_constraintStart_toStartOf="@id/gl_start_15"-->
+<!--            app:layout_constraintEnd_toEndOf="@id/gl_end_15"/>-->
 
-        <ImageView
-            android:id="@+id/iv_checkIn"
-            android:layout_width="@dimen/dp_50"
-            android:layout_height="@dimen/dp_50"
-            android:src="@mipmap/ic_task_checkin"
-            app:layout_constraintTop_toTopOf="@id/view_checkIn"
-            app:layout_constraintBottom_toBottomOf="@+id/view_checkIn"
-            app:layout_constraintStart_toStartOf="@+id/view_checkIn"/>
+<!--        <ImageView-->
+<!--            android:id="@+id/iv_checkIn"-->
+<!--            android:layout_width="@dimen/dp_50"-->
+<!--            android:layout_height="@dimen/dp_50"-->
+<!--            android:src="@mipmap/ic_task_checkin"-->
+<!--            app:layout_constraintTop_toTopOf="@id/view_checkIn"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/view_checkIn"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/view_checkIn"/>-->
 
-        <TextView
-            android:id="@+id/tv_checkIn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/iv_checkIn"
-            app:layout_constraintStart_toEndOf="@id/iv_checkIn"
-            android:layout_marginStart="@dimen/dp_10"
-            android:layout_marginTop="@dimen/dp_5"
-            android:textSize="@dimen/sp_16"
-            android:text="今日签到次数（0/0）"/>
+<!--        <TextView-->
+<!--            android:id="@+id/tv_checkIn"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintTop_toTopOf="@id/iv_checkIn"-->
+<!--            app:layout_constraintStart_toEndOf="@id/iv_checkIn"-->
+<!--            android:layout_marginStart="@dimen/dp_10"-->
+<!--            android:layout_marginTop="@dimen/dp_5"-->
+<!--            android:textSize="@dimen/sp_16"-->
+<!--            android:text="今日签到次数（0/0）"/>-->
 
-        <TextView
-            android:id="@+id/tv_checkIn2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tv_checkIn"
-            app:layout_constraintStart_toStartOf="@id/tv_checkIn"
-            android:layout_marginTop="@dimen/dp_5"
-            android:textColor="@color/color_99"
-            android:textSize="@dimen/sp_12"
-            android:text="获得额外金豆"/>
+<!--        <TextView-->
+<!--            android:id="@+id/tv_checkIn2"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/tv_checkIn"-->
+<!--            app:layout_constraintStart_toStartOf="@id/tv_checkIn"-->
+<!--            android:layout_marginTop="@dimen/dp_5"-->
+<!--            android:textColor="@color/color_99"-->
+<!--            android:textSize="@dimen/sp_12"-->
+<!--            android:text="获得额外金豆"/>-->
 
-        <TextView
-            android:id="@+id/btn_checkIn"
-            android:layout_width="@dimen/dp_60"
-            android:layout_height="@dimen/dp_30"
-            android:gravity="center"
-            app:layout_constraintEnd_toEndOf="@id/gl_end_15"
-            app:layout_constraintTop_toTopOf="@id/view_checkIn"
-            app:layout_constraintBottom_toBottomOf="@id/view_checkIn"
-            android:textColor="@color/white"
-            android:background="@drawable/bg_gradients_btn_368feb"
-            android:text="去完成"/>
+<!--        <TextView-->
+<!--            android:id="@+id/btn_checkIn"-->
+<!--            android:layout_width="@dimen/dp_60"-->
+<!--            android:layout_height="@dimen/dp_30"-->
+<!--            android:gravity="center"-->
+<!--            app:layout_constraintEnd_toEndOf="@id/gl_end_15"-->
+<!--            app:layout_constraintTop_toTopOf="@id/view_checkIn"-->
+<!--            app:layout_constraintBottom_toBottomOf="@id/view_checkIn"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:background="@drawable/bg_gradients_btn_368feb"-->
+<!--            android:text="去完成"/>-->
 
 
 
@@ -259,7 +259,7 @@
             android:id="@+id/view_game"
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_70"
-            app:layout_constraintTop_toBottomOf="@+id/view_checkIn"
+            app:layout_constraintTop_toBottomOf="@+id/view_video"
             app:layout_constraintStart_toStartOf="@id/gl_start_15"
             app:layout_constraintEnd_toEndOf="@id/gl_end_15"/>
 
