--- a/zhilianyc/app/src/main/res/layout/activity_otc_detail.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_otc_detail.xml
@@ -247,21 +247,34 @@
 
         <TextView
             android:id="@+id/tv_collection_code"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_20"
             android:textColor="@color/color_368feb"
+            app:layout_constraintEnd_toStartOf="@+id/tv_copy"
             app:layout_constraintStart_toStartOf="@+id/tv_No"
             app:layout_constraintTop_toBottomOf="@id/tv_order_time"
-            tools:text="6" />
+            tools:text="66666666666666666666666666666666" />
+
+        <TextView
+            android:id="@+id/tv_copy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="复制"
+            android:padding="@dimen/dp_5"
+            android:visibility="gone"
+            tools:visibility="visible"
+            app:layout_constraintTop_toTopOf="@+id/tv_collection_code"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_collection_code"
+            app:layout_constraintEnd_toEndOf="@+id/view_content"
+            android:textColor="@color/color_red"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_20"
             android:text="卖方收款号"
             android:textColor="@color/color_99"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_collection_code"
+            app:layout_constraintTop_toTopOf="@+id/tv_collection_code"
             app:layout_constraintStart_toStartOf="@+id/tv_21" />
 
 
