--- a/zhilianyc/app/src/main/res/layout/activity_login.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_login.xml
@@ -455,7 +455,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="@dimen/sp_10"
             android:background="@null"
-            android:hint="请出入手机号"
+            android:hint="请输入手机号"
             android:inputType="phone"
             android:maxLength="11"
             app:layout_constraintBottom_toBottomOf="@+id/view_phone"
@@ -497,7 +497,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="@dimen/sp_10"
             android:background="@null"
-            android:hint="请出入密码"
+            android:hint="请输入密码"
             android:inputType="textPassword"
             android:maxLength="20"
             app:layout_constraintBottom_toBottomOf="@+id/view_password"
